--- a/shippable.yml
+++ b/shippable.yml
@@ -21,3 +21,5 @@ notifications:
              - buildsampletest@gmail.com
 after_script:
   - cp README.md ./shippable
+
+build_image: shippable/minv2:beta
