--- a/shippable.yml
+++ b/shippable.yml
@@ -24,4 +24,4 @@ notifications:
 after_script:
   - cp README.md ./shippable
 
-#build_image: shippable/minv2:beta
+build_image: shippable/minv2:beta
