--- a/shippable.yml
+++ b/shippable.yml
@@ -11,7 +11,7 @@ archive: true
 
 before_install:
 #- source /home/shippable/.rvm/scripts/rvm
-- source ~/.rvm/scripts/rvm && rvm use 1.9.3
+  - rvm use 1.9.2
 
 before_script:
   - ruby initialize.rb
@@ -28,4 +28,4 @@ notifications:
 after_script:
   - cp README.md ./shippable
 
-build_image: shippable/minv2:beta
+#build_image: shippable/minv2:beta
