--- a/shippable.yml
+++ b/shippable.yml
@@ -28,4 +28,9 @@ notifications:
 after_script:
   - cp README.md ./shippable
 
+after_success:
+- echo "success"
+after_failure:
+- echo "failed"
+
 #build_image: shippable/minv2:beta
