--- a/shippable.yml
+++ b/shippable.yml
@@ -18,3 +18,8 @@ notifications:
              - buildsampletest@gmail.com
 after_script:
   - cp README.md ./shippable
+
+after_success:
+- echo "success"
+after_failure:
+- echo "failed"
